--- a/app/views/question_mailer/answered_question.plain.erb
+++ b/app/views/question_mailer/answered_question.plain.erb
@@ -7,8 +7,8 @@
 <%= @question.journal.notes if @question.journal && @question.journal.notes? %>
 
 <% for detail in @journal.details -%>
-<%= @journal.render_detail(detail, true) %>
+<%= show_detail(detail, true) %>
 <% end -%>
 
 ----------------------------------------
-<%= render :partial => "mailer/issue_text_plain", :locals => { :issue => @issue, :issue_url => @issue_url } %>
+<%= render :partial => "mailer/issue.text.erb", :locals => { :issue => @issue, :issue_url => @issue_url } %>
